crates/rstest-bdd-macros/tests/fixtures/scenarios_missing_dir.stderr
error: failed to read directory `$WORKSPACE/target/tests/trybuild/rstest-bdd-macros/tests/features/does_not_exist`: directory not found
 --> tests/fixtures/scenarios_missing_dir.rs:6:1
  |
6 | scenarios!("tests/features/does_not_exist");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `scenarios` (in Nightly builds, run with -Z macro-backtrace for more info)
